--- a/index.html
+++ b/index.html
@@ -23,24 +23,36 @@
 			<h4>La Mode</h4>
 			<img src="portImg/lamode.png">
 			<p>La Mode is an Ecommerce website for designed to market various clothing products. Users are able to try the available garments, select their desired quantity, and complete a shopping cart for making a final purchase. </p>
-			<h4>Technologies:</h4>
-			<div class="lilImg">
-				<img src="portImg/php.png">
-				<img src="portImg/codeigniter.png">
-				<img src="portImg/jQuery.png">
-				<img src="portImg/ajax.png">
-				<img src="portImg/mysql.png">
-				<img src="portImg/HTML.png">
-				<img src="portImg/CSS.png">
-				<img src="portImg/bootstrap.png">
-			</div>
-			<button class="butt">La Mode</button>
 		</div>
 
 		<div class="familyC y">
 			<h4>Family Contacts</h4>
 			<img src="portImg/familycontacts.png">
 			<p>Family Contacts is a free application for managing, sharing, and visualizing your family relationships for both extended and immediate family. As an essential feature of the project, your log-in information determines who you can see and reveals how people are related to you.</p>
+			
+		</div>
+
+		<div class="fiveE y">
+			<h4>FiveEleven</h4>
+			<img src="portImg/fiveEleven.png">
+			<p>Five Eleven is a data visualization project built on the Python software stack. The application transforms the developer job-hunt into a more visual, user friendly experience. Based on location, technology popularity, and other vast data sets, users may easily visualize the varying developer job market across the nation.</p>
+			
+		</div>
+		<div class="bottSec">
+			<h4>Technologies:</h4>
+				<div class="lilImg">
+					<img src="portImg/php.png">
+					<img src="portImg/codeigniter.png">
+					<img src="portImg/jQuery.png">
+					<img src="portImg/ajax.png">
+					<img src="portImg/mysql.png">
+					<img src="portImg/HTML.png">
+					<img src="portImg/CSS.png">
+					<img src="portImg/bootstrap.png">
+				</div>
+				<button class="butt">La Mode</button>
+		</div>
+		<div class="bottSec">
 			<h4>Technologies:</h4>
 			<div class="lilImg">
 				<img src="portImg/JavaScript.png">
@@ -54,11 +66,7 @@
 			</div>
 			<button class="butt">Family Contacts</button>
 		</div>
-
-		<div class="fiveE y">
-			<h4>FiveEleven</h4>
-			<img src="portImg/fiveEleven.png">
-			<p>Five Eleven is a data visualization project built on the Python software stack. The application transforms the developer job-hunt into a more visual, user friendly experience. Based on location, technology popularity, and other vast data sets, users may easily visualize the varying developer job market across the nation.</p>
+		<div class="bottSec">
 			<h4>Technologies:</h4>
 			<div class="lilImg">
 				<img src="portImg/python.png">
@@ -74,24 +82,21 @@
 			<button class="butt">fiveEleven</button>
 		</div>
 
+
+
+
+
 		<footer>
 			<p>jdoe@gmails.com | 206-555-1212</p>
-			<span>
-				<img class="lilImg" src="portImg/github.png">
-				<a href="#">jaynedev</a>
-			</span>
-			<span>
-				<img class="lilImg" src="portImg/linkedin.png">
-				<a href="#">jayne-doe</a>
-			</span>
-			<span>
-				<img class="lilImg" src="portImg/twitter.png">
-				<a href="#">jdtweets</a>
-			</span>
-			<span>
-				<img class="lilImg" src="portImg/codepen.png">
-				<a href="#">jaynedev</a>
-			</span>
+			<img class="lilImg" src="portImg/github.png">
+			<a href="#">jaynedev</a>
+			<img class="lilImg" src="portImg/linkedin.png">
+			<a href="#">jayne-doe</a>
+			<img class="lilImg" src="portImg/twitter.png">
+			<a href="#">jdtweets</a>
+			<img class="lilImg" src="portImg/codepen.png">
+			<a href="#">jaynedev</a>
+			
 		</footer>
 
 
